--- a/pages/layertwofma.html
+++ b/pages/layertwofma.html
@@ -9,15 +9,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <img src="../thumbnails/twohome.gif">
         <header>
             <audio autoplay loop controls id="my_audio">
-                <source src="../media/allforone.mp3">
+                <source src="../media/lust.mp3">
             </audio>
         </header>
         <div class="question">
             <p>1. What is the csdfasdfasdfsdapital of France?</p>
             <div class="answers">
-                <button onclick="selectAnswer('a')">Paris</button>
+                <button onclick="selectAnswer('a')">lust</button>
                 <button onclick="selectAnswer('b')">allforone</button>
                 <button onclick="selectAnswer('c')">London</button>
                 <button onclick="selectAnswer('d')">Rome</button>
@@ -40,6 +41,6 @@
               </label> -->
             </div>
           </div>
-        <script src="../scripts/allforone.js" class="b layertwofma"></script>
+        <script src="../scripts/allforone.js" class="a layerthreeaot"></script>
     </body>
 </html>
