--- a/pages/layeroneskull.html
+++ b/pages/layeroneskull.html
@@ -9,6 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <img src="../thumbnails/onehome.gif">
         <header>
             <audio autoplay loop controls id="my_audio">
                 <source src="../media/allforone.mp3">
