--- a/pages/thinkfast.html
+++ b/pages/thinkfast.html
@@ -57,6 +57,19 @@
                 transform: translateY(0);
                 pointer-events: all;
             }
+            body {
+                margin: 0;
+                overflow: hidden;
+                position: relative;
+                height: 100vh;
+                background-color: #f4f4f4;
+            }
+            .dot-image {
+                position: absolute;
+                width: 40px; /* Adjust image size */
+                height: 40px;
+                cursor: pointer;
+            }
         </style>
     </head>
     <body>
@@ -64,15 +77,9 @@
             <div class="popup-content">
                 <label>X</label>
                 <p style="font-size: 10pt;">
-                    better luck next time :/
+                    Hahahaha evil sub stole your cookie! better luck next time(hint: spank him with your mouse) :]
             </div>
         </div>
-        <img src="../thumbnails/twohome.gif">
-        <header>
-            <audio autoplay loop controls id="my_audio">
-                <source src="../media/lust.mp3">
-            </audio>
-        </header>
-        <script src="../scripts/thinkfast.js" class="a layerthreeaot"></script>
+        <script src="../scripts/thinkfast.js" class="a whatismyfavoritefood"></script>
     </body>
 </html>
