--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </head>
     <body>
         <header>
-            <p>Welcome</p>
+            <p>Welcome! To hell! Please traverse all 9 layers carefully, any mistake will send you back to the top! Only the worthy can proceed</p>
         </header>
         <a href="pages/layeroneskull.html" class="button-class">
-            Go to Another Page</a>
+            More suprises to come!</a>
     </body>
 </html>
