--- a/pages/layeroneskull.html
+++ b/pages/layeroneskull.html
@@ -16,12 +16,12 @@
             </audio>
         </header>
         <div class="question">
-            <p>1. What is the capital of France?</p>
+            <p>Do we have the same anime taste????: Who's mysterious theme is this???</p>
             <div class="answers">
-                <button onclick="selectAnswer('a')">Paris</button>
+                <button onclick="selectAnswer('a')">oneforall</button>
                 <button onclick="selectAnswer('b')">allforone</button>
-                <button onclick="selectAnswer('c')">London</button>
-                <button onclick="selectAnswer('d')">Rome</button>
+                <button onclick="selectAnswer('c')">bakugo</button>
+                <button onclick="selectAnswer('d')">todoroki</button>
             </div>
               <!-- <label>
                 <input type="radio" name="q1" value="a">
