--- a/pages/layertwofma.html
+++ b/pages/layertwofma.html
@@ -16,12 +16,12 @@
             </audio>
         </header>
         <div class="question">
-            <p>1. What is the csdfasdfasdfsdapital of France?</p>
+            <p>Do we have the same anime taste????: do you know the scene? hint: she's burnin in the fires of hell, at this level</p>
             <div class="answers">
                 <button onclick="selectAnswer('a')">lust</button>
-                <button onclick="selectAnswer('b')">allforone</button>
-                <button onclick="selectAnswer('c')">London</button>
-                <button onclick="selectAnswer('d')">Rome</button>
+                <button onclick="selectAnswer('b')">roy</button>
+                <button onclick="selectAnswer('c')">alphonse</button>
+                <button onclick="selectAnswer('d')">edward</button>
             </div>
               <!-- <label>
                 <input type="radio" name="q1" value="a">
