--- a/pages/thinkfast.html
+++ b/pages/thinkfast.html
@@ -80,6 +80,6 @@
                     Hahahaha evil sub stole your cookie! better luck next time(hint: spank him with your mouse) :]
             </div>
         </div>
-        <script src="../scripts/thinkfast.js" class="a whatismyfavoritefood"></script>
+        <script src="../scripts/thinkfast.js" class="a whatdoesthisstandfor"></script>
     </body>
 </html>
