--- a/pages/whatdoesthisstandfor.html
+++ b/pages/whatdoesthisstandfor.html
@@ -9,22 +9,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <img src="../thumbnails/threehome.gif">
+        <img src="../thumbnails/cbt.png">
         <header>
             <audio autoplay loop controls id="my_audio">
-                <source src="../media/ryuk.mp3">
+                <source src="../media/allforone.mp3">
             </audio>
         </header>
         <div class="question">
-            <p>Do we have the same anime taste????: who's this? perhaps it's me chocking on some?</p>
+            <p>Fun Kink Trivia! What does cbt stand for?</p>
             <div class="answers">
-                <button onclick="selectAnswer('a')">kira</button>
-                <button onclick="selectAnswer('b')">light</button>
-                <button onclick="selectAnswer('c')">ryuk</button>
-                <button onclick="selectAnswer('d')">yagami</button>
+                <button onclick="selectAnswer('a')">cognitive behavioral therapy</button>
+                <button onclick="selectAnswer('b')">a fun time!</button>
+                <button onclick="selectAnswer('c')">cock and ball torture</button>
+                <button onclick="selectAnswer('d')">euthanization</button>
             </div>
-            </div>
-          </div>
-        <script src="../scripts/allforone.js" class="c thinkfast"></script>
+        </div>
+        <script src="../scripts/allforone.js" class="c whichhurtsmore"></script>
     </body>
 </html>
