--- a/pages/whichhurtsmore.html
+++ b/pages/whichhurtsmore.html
@@ -9,22 +9,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <img src="../thumbnails/threehome.gif">
+        <img src="../thumbnails/quinn.png">
         <header>
             <audio autoplay loop controls id="my_audio">
-                <source src="../media/ryuk.mp3">
+                <source src="../media/allforone.mp3">
             </audio>
         </header>
         <div class="question">
-            <p>Do we have the same anime taste????: who's this? perhaps it's me chocking on some?</p>
+            <p>Fun Kink Trivia! Which leaves a sub more sore?</p>
             <div class="answers">
-                <button onclick="selectAnswer('a')">kira</button>
-                <button onclick="selectAnswer('b')">light</button>
-                <button onclick="selectAnswer('c')">ryuk</button>
-                <button onclick="selectAnswer('d')">yagami</button>
+                <button onclick="selectAnswer('a')">whip</button>
+                <button onclick="selectAnswer('b')">bat</button>
             </div>
-            </div>
-          </div>
-        <script src="../scripts/allforone.js" class="c thinkfast"></script>
+        </div>
+        <script src="../scripts/allforone.js" class="b whichanimeisthisfrom"></script>
     </body>
 </html>
