--- a/index.html
+++ b/index.html
@@ -23,13 +23,28 @@
                 cursor: pointer;
                 border-radius: 4px;
             }
+        body {
+            background-image: url('thumbnails/dantes.jpg');
+            background-size: cover; /* Ensures the image covers the entire screen */
+            background-position: center; /* Center the image */
+        }
+        p {
+            text-align: center; /* Center the text inside the p element */
+            background-color: yellow; /* Highlight the paragraph with a yellow background */
+            color: black; /* Change text color */
+            padding: 20px; /* Add padding around the text */
+            border-radius: 10px; /* Optional: Round the corners */
+            width: 50%; /* Optional: Adjust width of the p element */
+            margin: 0 auto; /* Center the p element horizontally on the page */
+        }
         </style>
     </head>
     <body>
         <header>
             <p>Welcome! To hell! Please traverse all 9 layers carefully, any mistake will send you back to the top! Only the worthy can proceed</p>
+            <p>srry this is horribly formatted and rushed since i already delayed once lol, hope yal enjoy!.. SEE THE VISION</p>
         </header>
         <a href="pages/layeroneskull.html" class="button-class">
-            More suprises to come!</a>
+            More suprises to come! (CLICK ME)</a>
     </body>
 </html>
